<resources>
    <string name="app_name">loginform</string>
    <string name="email">Email</string>
    <string name="password">password</string>
    <string name="name">Name</string>
    <string name="create_account">Create Account</string>
    <string name="confirm_password">confirm password</string>
    <string name="sign_up">Sign up</string>
    <string name="log_in_with_google">Log in with Google</string>
    <string name="log_in_with_facebook">Log in with Facebook</string>

</resources>