<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignupActivity">

    <TextView
        android:id="@+id/textCreate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="100dp"
        android:text="@string/create_account"
        android:textColor="#000000"
        android:layout_alignEnd="@id/btnSignUp"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/textName"
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_height48dp"
        android:layout_marginTop="50dp"
        android:background="@android:color/transparent"
        android:ems="10"
        android:fontFamily="sans-serif"
        android:hint="@string/name"
        android:inputType="textEmailAddress"
        android:paddingLeft="15dp"
        android:paddingBottom="4dp"
        android:textColorHint="#767474"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textCreate" />

    <View
        android:layout_width="@dimen/size_width380dp"
        android:layout_height="1dp"
        android:background="#A0A0A0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textName" />

    <EditText
        android:id="@+id/textEmail"
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_height48dp"
        android:layout_marginTop="30dp"
        android:background="@android:color/transparent"
        android:ems="10"
        android:fontFamily="sans-serif"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:paddingLeft="15dp"
        android:paddingBottom="4dp"
        android:textColorHint="#767474"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textName" />

    <View
        android:layout_width="@dimen/size_width380dp"
        android:layout_height="1dp"
        android:background="#A0A0A0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textEmail" />


    <EditText
        android:id="@+id/textPass"
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_height48dp"
        android:layout_marginTop="30dp"
        android:background="@android:color/transparent"
        android:ems="10"
        android:fontFamily="sans-serif"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingLeft="15dp"
        android:paddingBottom="4dp"
        android:textColorHint="#767474"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textEmail" />

    <View
        android:layout_width="@dimen/size_width380dp"
        android:layout_height="1dp"
        android:background="#A0A0A0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textPass" />


    <EditText
        android:id="@+id/textConfirmPass"
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_height48dp"
        android:layout_marginTop="30dp"
        android:background="@android:color/transparent"
        android:ems="10"
        android:fontFamily="sans-serif"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:paddingLeft="15dp"
        android:paddingBottom="4dp"
        android:textColorHint="#767474"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textPass" />

    <View
        android:layout_width="@dimen/size_width380dp"
        android:layout_height="1dp"
        android:background="#A0A0A0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textConfirmPass" />


    <Button
        android:id="@+id/btnSignUp"
        android:layout_width="@dimen/size_width380dp"
        android:layout_height="@dimen/size_height48dp"
        android:layout_marginTop="60dp"
        android:background="@drawable/custom_login_signup"
        android:text="@string/sign_up"
        android:textAllCaps="false"
        android:textColor="#000000"
        android:textSize="20sp"
        android:textStyle="bold"
        app:backgroundTint="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textConfirmPass" />

    <LinearLayout
        android:id="@+id/btnGoogle"
        android:layout_width="@dimen/size_width380dp"
        android:layout_height="@dimen/size_height48dp"
        android:layout_alignEnd="@id/btnSignUp"
        android:layout_marginTop="60dp"
        android:background="@drawable/customgoogleandface"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnSignUp">


        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="sans-serif-medium"
            android:gravity="center"
            android:text="@string/log_in_with_google"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="16sp" />

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:contentDescription="Google logo"
            android:src="@drawable/ic_google_logo" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/btnFacebook"
        android:layout_width="@dimen/size_width380dp"
        android:layout_height="@dimen/size_height48dp"
        android:layout_marginTop="10dp"
        android:layout_alignEnd="@id/btnSignUp"
        android:background="@drawable/customgoogleandface"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnGoogle">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="sans-serif-medium"
            android:text="@string/log_in_with_facebook"
            android:textColor="#000000"
            android:textSize="16sp"
            android:gravity="center"
            android:textAlignment="center"/>

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:contentDescription="Facebook logo"
            android:src="@drawable/ic_facebook_logo" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="5dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnFacebook">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="Already a member? "
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tvSignIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?attr/selectableItemBackground"
            android:onClick="onSignInClick"
            android:text="Sign in"
            android:textColor="#4285F4"
            android:textSize="14sp"
            android:textStyle="bold"
            android:tooltipText="Click to join now" />
    </LinearLayout>





</androidx.constraintlayout.widget.ConstraintLayout>